# secret-santa

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
secret_santa/: __init__.py  __main__.py  const.py  secret_santa.py  secret_santa_module.py  twilio_messaging_service.py
secret_santa/client/: __init__.py  app.py
secret_santa/model/: __init__.py  participant.py
secret_santa/util/: arg_parser.py  file.py  logging.py  misc.py  path.py
src/secret_santa/: secret_santa_module.py
src/secret_santa/client/: app.py
src/secret_santa/model/: participant.py
src/secret_santa/util/: logging.py  path.py
tests/: conftest.py  test_secret_santa.py  test_twilio_messaging_service.py
tests/data/: example.env  invalid_example.env  participants_example.json  simple_text.txt
tests/model/: test_participant.py
tests/util/: test_arg_parser.py  test_file.py  test_logging.py  test_misc.py  test_path.py
